--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NODE_ENV=development
-MONGO_URL=mongodb+srv://Purek:Almurabi1234@clusterpk.7kiwhzt.mongodb.net/Almurabbi-ReasAPI?retryWrites=true&w=majority
+MONGO_URL=
 PORT=3000
